--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -36,9 +36,9 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: NPM Install
-        run: npm install
+      - name: Install Yarn Dependencies
+        run: yarn install
 
-      - name: NPM Build
-        run: REACT_APP_API_ENDPOINT=$REACT_APP_API_ENDPOINT npm run build --verbose
+      - name: Yarn Build
+        run: REACT_APP_API_ENDPOINT=$REACT_APP_API_ENDPOINT yarn build --verbose
         
