--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -41,4 +41,9 @@ jobs:
 
       - name: Yarn Build
         run: REACT_APP_API_ENDPOINT=$REACT_APP_API_ENDPOINT yarn build --verbose
-        
+
+      - name: Sync files to S3
+        run:
+          aws s3 sync --delete build/ s3://$S3_BUCKET
+          aws s3 sync build/ s3://$S3_BUCKET --include "*" --exclude "index.html"
+          aws s3 sync build/ s3://$S3_BUCKET --exclude "*" --include "index.html" --cache-control max-age=0
