--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.383.0",
     "react": "^18.3.1",
