syntax error resolved

--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -44,7 +44,8 @@ jobs:
         run: REACT_APP_API_ENDPOINT=$REACT_APP_API_ENDPOINT yarn build
 
       - name: Sync files to S3
-        run:
+        run: |
           aws s3 sync --delete build/ s3://$S3_BUCKET
           aws s3 sync build/ s3://$S3_BUCKET --include "*" --exclude "index.html"
           aws s3 sync build/ s3://$S3_BUCKET --exclude "*" --include "index.html" --cache-control max-age=0
+          
