--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -45,7 +45,6 @@ jobs:
 
       - name: Sync files to S3
         run: |
-          aws s3 sync --delete build/ s3://$S3_BUCKET
-          aws s3 sync build/ s3://$S3_BUCKET --include "*" --exclude "index.html"
-          aws s3 sync build/ s3://$S3_BUCKET --exclude "*" --include "index.html" --cache-control max-age=0
-          
+          aws s3 sync --delete dist/ s3://$S3_BUCKET
+          aws s3 sync dist/ s3://$S3_BUCKET --include "*" --exclude "index.html"
+          aws s3 sync dist/ s3://$S3_BUCKET --exclude "*" --include "index.html" --cache-control max-age=0
