--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -1,9 +1,11 @@
 name: Deploy to S3
 
-on:
-  push:
-    branches:
-      - main # Deploys when you push to the main branch
+# on:
+#   push:
+#     branches:
+#       - main # Deploys when you push to the main branch
+
+on: workflow_dispatch
 
 jobs:
   deploy:
