--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Specify the environment dynamically based on the input
-    environment: ${{ github.event.inputs.environment }}
+    environment: Development
 
     steps:
       - name: Checkout code
